# InstructifyAI

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ACHIEVEMENTS.md  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  STATUS.md  alembic.ini  docker-compose.adapters.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-ml-common.txt  requirements-ocr.txt  requirements.txt  snapshot.jsonl  tmp.Dockerfile
alembic/: env.py
api/: db.py  deps.py  main.py  metrics.py  schemas.py  search.py
backends/: hf_runner.py  llama_cpp_runner.py  rwkv_runner.py
chunking/: chunker.py  chunker_v2.py
core/: active_learning.py  auth.py  correlation.py  dedupe.py  guidelines.py  hash.py  hw.py  lang_detect.py  logging.py  metrics.py  notify.py  pii.py  settings.py  taxonomy_migrations.py
docker/: Dockerfile.worker  Dockerfile.worker-ocr  ocr_deepseek.Dockerfile
docs/: CHANGELOG.md  architecture.md  codex_prompt_pack_phase1_v2_1_merged.md  comparison.md  datasheet.md  gen_ask_grounding_plan.md  gen_ask_latency_citations_plan.md  incremental_parse.md  local_training_and_gen_ask.md  phase1_backlog_tasks_v2.csv  roadmap.md  roi.md  security.md  sprint2_agents_guide_v1.md  sprint2_tasks_v1.csv  sprint_feature_backlog_v1.csv  sprint_feature_guide_v1.md  sprint_next_parser_optimizations_guide_v1.md  sprint_next_parser_optimizations_v1.csv  sprint_parserpp_celery_guide_v1.md  sprint_parserpp_celery_tasks_v1.csv
evals/: __init__.py  runner.py  storage.py
exporters/: __init__.py  (+8 more)
(+281 files in other folders)
